crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__single__range_periodic_reverse.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Ok(
    (
        "",
        SecondRule {
            kinds: [
                SecondKind {
                    range: (
                        Second(
                            59,
                        ),
                        Second(
                            0,
                        ),
                    ),
                    periodic: SecondPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
