crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__single__specifier_10.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "10",
                    Alt,
                ),
            ],
        },
    ),
)
